tests/ui/g-load-begin-wrong-control-kind.stderr
error[E0080]: evaluation panicked: wire control messages require cross-role send
 --> $RUST/core/src/panic.rs
  |
  = note: evaluation of `hibana::g::send::<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<110, hibana::integration::cap::GenericCapToken<LoadBeginKind>, LoadBeginKind>, 0>::{constant#0}` failed here
  |
 ::: src/global.rs
  |
  |                     panic!("wire control messages require cross-role send")
  |                     ------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global.rs
  |
  | /     const {
  | |         let from = <From as KnownRole>::INDEX;
  | |         let to = <To as KnownRole>::INDEX;
  | |         crate::global::validate_role_index(from);
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<Role<0>, Role<0>, Msg<110, GenericCapToken<LoadBeginKind>, LoadBeginKind>, 0>`
  --> tests/ui/g-load-begin-wrong-control-kind.rs:46:13
   |
46 |       let _ = g::send::<
   |  _____________^
47 | |         g::Role<0>,
48 | |         g::Role<0>,
49 | |         g::Msg<
...  |
54 | |         0,
55 | |     >();
   | |_______^
